--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -567,12 +567,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 106, "Edit", WS_BORDER, 362, 90, 90, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 488, 30, 70, 11
   CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 560, 30, 102, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 488, 42, 70, 11
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 560, 42, 102, 11
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 488, 54, 70, 11
-  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 560, 54, 102, 11
-  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 488, 66, 70, 11
-  CONTROL "", 341, "Edit", WS_BORDER|WS_TABSTOP, 560, 66, 102, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 488, 42, 70, 11
+  CONTROL "", 341, "Edit", WS_BORDER|WS_TABSTOP, 560, 42, 102, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 488, 54, 70, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 560, 54, 102, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 488, 66, 70, 11
+  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 560, 66, 102, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 488, 78, 70, 11
   CONTROL "", 171, "TBitmap", 0x00800000, 560, 78, 19, 11
   CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 581, 78, 81, 11
@@ -594,7 +594,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 490, "TXBrowse", WS_TABSTOP|0x00300000, 208, 295, 321, 73
   CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 540, 320, 33, 10
   CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 97, 30, 24, 11
-  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 123, 30, 33, 11
+  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 121, 30, 37, 11
   CONTROL "", 105, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 158, 30, 17, 11
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 97, 41, 78, 11
   CONTROL "&G", 558, "Button", WS_TABSTOP, 86, 53, 11, 11
@@ -614,8 +614,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "CP/Población", -1, "Static", WS_GROUP, 180, 81, 45, 8
   CONTROL "N.I.F.", -1, "Static", WS_GROUP, 180, 56, 45, 8
   CONTROL "Provincia", -1, "Static", WS_GROUP, 180, 93, 45, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 454, 46, 22, 8
-  CONTROL "Caja", -1, "Static", WS_GROUP, 454, 58, 19, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 454, 57, 22, 8
+  CONTROL "Caja", -1, "Static", WS_GROUP, 454, 69, 19, 8
   CONTROL "Divisa", -1, "Static", WS_GROUP, 454, 81, 25, 8
   CONTROL "%", 701, "Static", WS_GROUP, 186, 309, 8, 8
   CONTROL "%", 702, "Static", WS_GROUP, 186, 322, 8, 8
@@ -633,7 +633,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Fecha su alb.", -1, "Static", WS_GROUP, 44, 93, 49, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Albaranes de proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Origen", 342, "Static", WS_GROUP, 454, 70, 26, 8
+  CONTROL "Origen", 342, "Static", WS_GROUP, 454, 45, 26, 8
 }
 
 ALBPRV_2 DIALOG DISCARDABLE 4, 18, 670, 375
@@ -6839,31 +6839,31 @@ FACPRV_1 DIALOG DISCARDABLE 50, 35, 670, 378
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 230, 30, 90, 12
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 230, 42, 215, 12
-  CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 230, 54, 90, 12
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 230, 66, 215, 12
-  CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 230, 78, 58, 12
-  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 290, 78, 155, 12
-  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 230, 90, 215, 12
-  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 230, 102, 90, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 481, 30, 60, 12
-  CONTROL "", 151, "Edit", WS_BORDER, 543, 30, 118, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 481, 42, 60, 12
-  CONTROL "", 161, "Edit", WS_BORDER, 543, 42, 118, 12
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 481, 54, 180, 12
-  CONTROL "", 305, "Edit", WS_BORDER|WS_TABSTOP, 481, 66, 18, 12
-  CONTROL "", 306, "Edit", WS_BORDER|WS_TABSTOP, 499, 66, 18, 12
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 518, 66, 28, 12
-  CONTROL "", 302, "Edit", WS_BORDER|WS_TABSTOP, 547, 66, 28, 12
-  CONTROL "", 303, "Edit", WS_BORDER|WS_TABSTOP, 575, 66, 18, 12
-  CONTROL "", 304, "Edit", WS_BORDER|WS_TABSTOP, 593, 66, 68, 12
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 481, 78, 60, 12
-  CONTROL "", 166, "Edit", WS_BORDER, 543, 78, 118, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 481, 90, 39, 12
-  CONTROL "", 171, "TBitMap", 0x00800000, 522, 90, 19, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 544, 90, 117, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 95, 102, 85, 12
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 230, 30, 90, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 230, 42, 215, 11
+  CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 230, 54, 90, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 230, 66, 215, 11
+  CONTROL "", 104, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 230, 78, 58, 11
+  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 290, 78, 155, 11
+  CONTROL "", 108, "Edit", WS_BORDER|WS_TABSTOP, 230, 90, 215, 11
+  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 230, 102, 90, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 488, 30, 70, 11
+  CONTROL "", 151, "Edit", WS_BORDER, 560, 30, 108, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 488, 42, 70, 11
+  CONTROL "", 161, "Edit", WS_BORDER, 560, 42, 108, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 488, 54, 180, 11
+  CONTROL "", 305, "Edit", WS_BORDER|WS_TABSTOP, 488, 66, 18, 11
+  CONTROL "", 306, "Edit", WS_BORDER|WS_TABSTOP, 506, 66, 19, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 525, 66, 28, 11
+  CONTROL "", 302, "Edit", WS_BORDER|WS_TABSTOP, 554, 66, 28, 11
+  CONTROL "", 303, "Edit", WS_BORDER|WS_TABSTOP, 582, 66, 18, 11
+  CONTROL "", 304, "Edit", WS_BORDER|WS_TABSTOP, 600, 66, 68, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 488, 78, 70, 11
+  CONTROL "", 166, "Edit", WS_BORDER, 560, 78, 108, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 488, 90, 70, 11
+  CONTROL "", 171, "TBitmap", 0x00800000, 560, 90, 19, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 581, 90, 87, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 91, 102, 85, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 115, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 115, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 115, 50, 14
@@ -6872,42 +6872,42 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 319, 115, 50, 14
   CONTROL "", 190, "TXBrowse", WS_TABSTOP|0x00300000, 44, 131, 615, 156
   CONTROL "", 290, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 44, 131, 615, 156
-  CONTROL "", 199, "Edit", WS_BORDER|WS_TABSTOP, 50, 305, 80, 12
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 305, 44, 12
-  CONTROL "", 209, "Edit", WS_BORDER|WS_TABSTOP, 50, 318, 80, 12
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 318, 44, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 50, 331, 80, 12
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 331, 44, 12
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 50, 344, 80, 12
-  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 344, 44, 12
+  CONTROL "", 199, "Edit", WS_BORDER|WS_TABSTOP, 50, 305, 80, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 305, 44, 11
+  CONTROL "", 209, "Edit", WS_BORDER|WS_TABSTOP, 50, 318, 80, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 318, 44, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 50, 331, 80, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 331, 44, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 50, 344, 80, 11
+  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 344, 44, 11
   CONTROL "", 490, "TXBrowse", WS_TABSTOP|0x00300000, 198, 296, 296, 74
   CONTROL "R.E.", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 501, 314, 27, 10
   CONTROL "", 440, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 501, 329, 53, 40
   CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 555, 329, 34, 13
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 95, 30, 26, 12
-  CONTROL "", 101, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 123, 30, 36, 12
-  CONTROL "", 102, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 161, 30, 19, 12
-  CONTROL "", 570, "Edit", WS_BORDER|WS_TABSTOP, 95, 42, 85, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 95, 54, 85, 12
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 30, 26, 11
+  CONTROL "", 101, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 119, 30, 36, 11
+  CONTROL "", 102, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 156, 30, 19, 12
+  CONTROL "", 570, "Edit", WS_BORDER|WS_TABSTOP, 91, 42, 85, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 91, 54, 85, 11
   CONTROL "Régimen especial del criterio de caja", 195, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 67, 129, 10
-  CONTROL "G", 512, "Button", WS_TABSTOP, 83, 78, 11, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 95, 78, 85, 12
+  CONTROL "G", 512, "Button", WS_TABSTOP, 79, 78, 11, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 91, 78, 85, 11
   CONTROL "Factura de gastos", 550, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 92, 71, 10
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 35, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 57, 35, 8
   CONTROL "Albarán", -1, "Static", WS_GROUP, 44, 81, 35, 8
   CONTROL "Su factura", -1, "Static", WS_GROUP, 44, 105, 38, 8
-  CONTROL "Proveedor", -1, "Static", WS_GROUP, 183, 33, 38, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 183, 45, 30, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 183, 69, 33, 8
-  CONTROL "CP/Población", -1, "Static", WS_GROUP, 183, 81, 49, 8
-  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 183, 57, 23, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 183, 93, 35, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 183, 105, 33, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 449, 33, 31, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 449, 45, 31, 8
-  CONTROL "Caja", -1, "Static", WS_GROUP, 449, 81, 31, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 449, 93, 31, 8
+  CONTROL "Proveedor", -1, "Static", WS_GROUP, 180, 33, 38, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 180, 45, 30, 8
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 180, 69, 33, 8
+  CONTROL "CP/Población", -1, "Static", WS_GROUP, 180, 81, 49, 8
+  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 180, 57, 23, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 180, 93, 35, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 180, 105, 33, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 454, 33, 31, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 454, 45, 31, 8
+  CONTROL "Caja", -1, "Static", WS_GROUP, 454, 81, 31, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 454, 93, 31, 8
   CONTROL "%", 701, "Static", WS_GROUP, 179, 308, 8, 8
   CONTROL "%", 702, "Static", WS_GROUP, 179, 320, 8, 8
   CONTROL "%", 703, "Static", WS_GROUP, 179, 332, 8, 8
@@ -6922,33 +6922,33 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 420, "Static", WS_GROUP, 501, 349, 36, 22
   CONTROL "0", 491, "Static", SS_RIGHT|WS_GROUP, 605, 332, 52, 8
   CONTROL "Concepto", 707, "Static", WS_GROUP, 44, 119, 33, 8
-  CONTROL "", 600, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 296, 60, 12
+  CONTROL "", 600, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 296, 60, 11
   CONTROL "Base 1", 708, "Static", WS_GROUP, 44, 299, 27, 8
-  CONTROL "", 601, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 296, 45, 12
-  CONTROL "", 602, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 221, 296, 60, 12
+  CONTROL "", 601, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 296, 45, 11
+  CONTROL "", 602, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 221, 296, 60, 11
   CONTROL "% Imp. 1", 709, "Static", WS_GROUP, 139, 299, 32, 8
-  CONTROL "", 603, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 322, 296, 45, 12
-  CONTROL "", 604, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 296, 60, 12
+  CONTROL "", 603, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 322, 296, 45, 11
+  CONTROL "", 604, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 296, 60, 11
   CONTROL "% R.E. 1", 710, "Static", WS_GROUP, 285, 299, 33, 8
-  CONTROL "", 610, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 308, 60, 12
+  CONTROL "", 610, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 308, 60, 11
   CONTROL "Base 2", 711, "Static", WS_GROUP, 44, 311, 27, 8
-  CONTROL "", 611, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 308, 45, 12
-  CONTROL "", 612, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 221, 308, 60, 12
+  CONTROL "", 611, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 308, 45, 11
+  CONTROL "", 612, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 221, 308, 60, 11
   CONTROL "% Imp. 2", 712, "Static", WS_GROUP, 139, 311, 32, 8
-  CONTROL "", 613, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 322, 308, 45, 12
-  CONTROL "", 614, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 308, 60, 12
+  CONTROL "", 613, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 322, 308, 45, 11
+  CONTROL "", 614, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 308, 60, 11
   CONTROL "% R.E. 2", 713, "Static", WS_GROUP, 285, 311, 33, 8
-  CONTROL "", 620, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 320, 60, 12
+  CONTROL "", 620, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 73, 320, 60, 11
   CONTROL "Base 3", 714, "Static", WS_GROUP, 44, 323, 27, 8
-  CONTROL "", 621, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 320, 45, 12
-  CONTROL "", 622, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 221, 320, 60, 12
+  CONTROL "", 621, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 320, 45, 11
+  CONTROL "", 622, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 221, 320, 60, 11
   CONTROL "% Imp. 3", 715, "Static", WS_GROUP, 139, 322, 32, 8
-  CONTROL "", 623, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 322, 320, 45, 12
-  CONTROL "", 624, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 320, 60, 12
+  CONTROL "", 623, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 322, 320, 45, 11
+  CONTROL "", 624, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 320, 60, 11
   CONTROL "% R.E. 3", 716, "Static", WS_GROUP, 285, 323, 33, 8
   CONTROL "NFC", -1, "Static", WS_GROUP, 44, 45, 35, 8
-  CONTROL "Banco", -1, "Static", WS_GROUP, 449, 57, 31, 8
-  CONTROL "IBAN", -1, "Static", WS_GROUP, 449, 69, 31, 8
+  CONTROL "Banco", -1, "Static", WS_GROUP, 454, 57, 31, 8
+  CONTROL "IBAN", -1, "Static", WS_GROUP, 454, 69, 31, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Facturas a proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
