--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19192,14 +19192,16 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Artículo"
 FONT 8, "Helv"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 54, 13, 101, 12
-  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 54, 26, 212, 12
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 69, 13, 70, 11
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 69, 26, 197, 11
   CONTROL "", 102, "TBitMap", 0x00800000, 275, 7, 60, 62
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 165, 74, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 220, 74, 50, 14
   CONTROL "Artículo", -1, "Button", BS_GROUPBOX, 2, 3, 268, 66
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 16, 27, 8
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 8, 29, 45, 8
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 69, 39, 69, 11
+  CONTROL "Incremento precio", 4001, "Static", WS_GROUP, 8, 42, 60, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
@@ -19214,8 +19216,9 @@ FONT 8, "Helv"
   CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 79, 43, 32, 11
   CONTROL "Intercambiable", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 10, 60, 63, 10
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 89, 50, 14
-  CONTROL "&Eliminar [F4]", 501, "Button", WS_TABSTOP, 62, 89, 50, 14
-  CONTROL "&Zoom", 502, "Button", WS_TABSTOP, 118, 89, 50, 14
+  CONTROL "&Modificar [F3]", 503, "Button", WS_TABSTOP, 62, 89, 50, 14
+  CONTROL "&Eliminar [F4]", 501, "Button", WS_TABSTOP, 118, 89, 50, 14
+  CONTROL "&Ficha Art.", 502, "Button", WS_TABSTOP, 239, 89, 50, 14
   CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 105, 282, 105
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 189, 219, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 244, 219, 50, 14
