--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -2458,15 +2458,15 @@ FONT 12, "Segoe UI"
   CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 294, 170, 30, 22
 }
 
-TPVMENUACOMPSIMPLE DIALOG DISCARDABLE 87, -178, 267, 197
+TPVMENUACOMPSIMPLE DIALOG DISCARDABLE 87, -178, 262, 192
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Acompañamiento de artículo"
 FONT 12, "Segoe UI"
 {
-  CONTROL "", 100, "TXBrowse", 0x00200000, 6, 9, 255, 159
-  CONTROL "", 110, "Button", WS_TABSTOP, 6, 170, 30, 22
-  CONTROL "", 111, "Button", WS_TABSTOP, 37, 170, 30, 22
-  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 199, 170, 30, 22
+  CONTROL "", 110, "Button", WS_TABSTOP, 2, 170, 30, 22
+  CONTROL "", 111, "Button", WS_TABSTOP, 32, 170, 30, 22
+  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 200, 170, 30, 22
   CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 230, 170, 30, 22
+  CONTROL "", 100, "C5ImageView", WS_TABSTOP|0x00800000, 2, 2, 258, 166
 }
 
