Albaranes en TPV

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4181,11 +4181,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 814, "Button", WS_TABSTOP, 557, 291, 38, 36
   CONTROL "", 601, "Button", WS_TABSTOP, 293, 40, 48, 48
   CONTROL "", 602, "Button", NOT WS_VISIBLE|WS_TABSTOP, 345, 40, 48, 48
-  CONTROL "", 120, "Edit", NOT WS_VISIBLE|WS_BORDER, 294, 51, 48, 34
-  CONTROL "", 121, "Edit", NOT WS_VISIBLE|WS_BORDER, 343, 51, 102, 34
+  CONTROL "", 120, "Edit", WS_BORDER, 294, 40, 48, 24
+  CONTROL "", 121, "Edit", WS_BORDER, 294, 64, 177, 24
   CONTROL "Forma de pago", -1, "Button", BS_GROUPBOX, 290, 29, 186, 119
   CONTROL "", 603, "Button", NOT WS_VISIBLE|WS_TABSTOP, 397, 40, 48, 48
-  CONTROL "", 604, "Button", NOT WS_VISIBLE|WS_TABSTOP, 295, 94, 48, 48
+  CONTROL "", 604, "Button", NOT WS_VISIBLE|WS_TABSTOP, 293, 94, 48, 48
   CONTROL "", 605, "Button", NOT WS_VISIBLE|WS_TABSTOP, 345, 94, 48, 48
   CONTROL "", 553, "Button", 0x00000000, 270, 375, 88, 36
   CONTROL "", 606, "Button", NOT WS_VISIBLE|WS_TABSTOP, 397, 94, 48, 48
@@ -4241,13 +4241,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 812, "Button", WS_TABSTOP, 718, 217, 38, 36
   CONTROL "", 813, "Button", WS_TABSTOP, 718, 254, 38, 36
   CONTROL "", 814, "Button", WS_TABSTOP, 718, 291, 38, 36
-  CONTROL "", 601, "Button", WS_TABSTOP, 356, 40, 48, 48
+  CONTROL "", 601, "Button", WS_TABSTOP, 357, 40, 48, 48
   CONTROL "", 602, "Button", NOT WS_VISIBLE|WS_TABSTOP, 408, 40, 48, 48
-  CONTROL "", 120, "Edit", NOT WS_VISIBLE|WS_BORDER, 357, 51, 48, 34
-  CONTROL "", 121, "Edit", NOT WS_VISIBLE|WS_BORDER, 406, 52, 102, 34
+  CONTROL "", 120, "Edit", WS_BORDER, 357, 40, 48, 24
+  CONTROL "", 121, "Edit", WS_BORDER, 358, 64, 149, 24
   CONTROL "Forma de pago", -1, "Button", BS_GROUPBOX, 353, 29, 279, 119
   CONTROL "", 603, "Button", NOT WS_VISIBLE|WS_TABSTOP, 460, 40, 48, 48
-  CONTROL "", 604, "Button", NOT WS_VISIBLE|WS_TABSTOP, 358, 94, 48, 48
+  CONTROL "", 604, "Button", NOT WS_VISIBLE|WS_TABSTOP, 357, 94, 48, 48
   CONTROL "", 605, "Button", NOT WS_VISIBLE|WS_TABSTOP, 408, 94, 48, 48
   CONTROL "", 553, "Button", 0x00000000, 431, 501, 88, 36
   CONTROL "", 606, "Button", NOT WS_VISIBLE|WS_TABSTOP, 460, 94, 48, 48
@@ -4305,11 +4305,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 814, "Button", WS_TABSTOP, 489, 274, 38, 35
   CONTROL "", 601, "Button", WS_TABSTOP, 254, 40, 48, 48
   CONTROL "", 602, "Button", NOT WS_VISIBLE|WS_TABSTOP, 306, 40, 48, 48
-  CONTROL "", 120, "Edit", NOT WS_VISIBLE|WS_BORDER, 255, 51, 48, 34
-  CONTROL "", 121, "Edit", NOT WS_VISIBLE|WS_BORDER, 304, 52, 102, 34
+  CONTROL "", 120, "Edit", WS_BORDER, 254, 40, 47, 24
+  CONTROL "", 121, "Edit", WS_BORDER, 254, 64, 151, 24
   CONTROL "Forma de pago", -1, "Button", BS_GROUPBOX, 251, 29, 162, 119
   CONTROL "", 603, "Button", NOT WS_VISIBLE|WS_TABSTOP, 358, 40, 48, 48
-  CONTROL "", 604, "Button", NOT WS_VISIBLE|WS_TABSTOP, 256, 94, 48, 48
+  CONTROL "", 604, "Button", NOT WS_VISIBLE|WS_TABSTOP, 254, 94, 48, 48
   CONTROL "", 605, "Button", NOT WS_VISIBLE|WS_TABSTOP, 306, 94, 48, 48
   CONTROL "", 553, "Button", 0x00000000, 202, 311, 88, 35
   CONTROL "", 606, "Button", NOT WS_VISIBLE|WS_TABSTOP, 358, 94, 48, 48
