--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6429,17 +6429,17 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Depósitos a almacenes"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 233, 30, 63, 12
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 233, 42, 200, 12
-  CONTROL "", 132, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 233, 54, 200, 12
-  CONTROL "", 133, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 233, 66, 63, 12
-  CONTROL "", 134, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 298, 66, 135, 12
-  CONTROL "", 135, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 233, 78, 117, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 461, 30, 55, 12
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 518, 30, 105, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 461, 42, 55, 12
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 518, 42, 105, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 461, 54, 55, 12
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 233, 30, 70, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 233, 43, 200, 11
+  CONTROL "", 132, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 233, 55, 200, 11
+  CONTROL "", 133, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 233, 67, 63, 11
+  CONTROL "", 134, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 298, 67, 135, 11
+  CONTROL "", 135, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 233, 79, 117, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 461, 30, 55, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 518, 30, 105, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 461, 43, 55, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 518, 43, 105, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 461, 56, 55, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 93, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 93, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 93, 50, 14
@@ -6447,21 +6447,21 @@ FONT 8, "MS Sans Serif"
   CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 264, 93, 50, 14
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 319, 93, 50, 14
   CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 44, 109, 578, 167
-  CONTROL "", 209, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 50, 297, 87, 12
-  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 139, 297, 50, 12
-  CONTROL "", 219, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 50, 311, 87, 12
-  CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 139, 311, 50, 12
+  CONTROL "", 209, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 50, 297, 87, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 139, 297, 50, 11
+  CONTROL "", 219, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 50, 311, 87, 11
+  CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 139, 311, 50, 11
   CONTROL "", 310, "TXBrowse", WS_TABSTOP|0x00300000, 211, 282, 278, 64
   CONTROL "R.E.", 450, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 500, 310, 23, 12
-  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 88, 30, 95, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 88, 42, 95, 12
+  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 88, 30, 95, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 88, 43, 95, 11
   CONTROL "Pago", -1, "Static", WS_GROUP, 437, 33, 22, 8
   CONTROL "Alm. entrada", -1, "Static", WS_GROUP, 187, 33, 45, 8
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 38, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 45, 38, 8
   CONTROL "Tarifa", -1, "Static", WS_GROUP, 437, 45, 23, 8
   CONTROL "Descuentos", -1, "Button", BS_GROUPBOX, 44, 283, 160, 62
-  CONTROL "", 171, "TBitmap", 0x00800000, 518, 55, 16, 10
+  CONTROL "", 171, "TBitMap", 0x00800000, 518, 56, 16, 11
   CONTROL "Divisa", -1, "Static", WS_GROUP, 437, 57, 21, 8
   CONTROL "Neto", -1, "Static", WS_GROUP, 500, 287, 18, 8
   CONTROL "Impuestos", -1, "Static", WS_GROUP, 500, 299, 19, 8
@@ -6478,11 +6478,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 187, 57, 45, 8
   CONTROL "CP/Población", -1, "Static", WS_GROUP, 187, 69, 45, 8
   CONTROL "Provincia", -1, "Static", WS_GROUP, 187, 81, 45, 8
-  CONTROL "", 115, "Edit", WS_BORDER, 88, 54, 28, 12
-  CONTROL "", 116, "Edit", WS_BORDER, 118, 54, 65, 12
+  CONTROL "", 115, "Edit", WS_BORDER, 88, 56, 28, 11
+  CONTROL "", 116, "Edit", WS_BORDER, 118, 56, 65, 11
   CONTROL "Usuario", -1, "Static", WS_GROUP, 44, 57, 38, 8
-  CONTROL "", 300, "Edit", WS_BORDER, 88, 66, 28, 12
-  CONTROL "", 301, "Edit", WS_BORDER, 118, 66, 65, 12
+  CONTROL "", 300, "Edit", WS_BORDER, 88, 69, 28, 11
+  CONTROL "", 301, "Edit", WS_BORDER, 118, 69, 65, 11
   CONTROL "Liquidada", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 80, 48, 10
   CONTROL "Delegación", -1, "Static", WS_GROUP, 44, 69, 38, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
@@ -14330,12 +14330,12 @@ LQDALM_1 DIALOG DISCARDABLE 21, 20, 356, 260
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 81, 15, 60, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 81, 27, 60, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 81, 44, 40, 12
-  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 144, 44, 203, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 81, 56, 40, 12
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 144, 56, 203, 12
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 81, 15, 60, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 81, 27, 60, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 81, 44, 70, 11
+  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 152, 44, 195, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 81, 56, 70, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 152, 56, 195, 11
   CONTROL "&Siguiente >", 519, "Button", WS_TABSTOP, 249, 242, 50, 14
   CONTROL "&Cancelar", 510, "Button", WS_TABSTOP, 304, 242, 50, 14
   CONTROL "TMeter", 140, "TMeter", 0x00800000, 82, 223, 266, 10
