almacenes en produccion y sat

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14212,28 +14212,28 @@ LPRODUCIDO_1 DIALOG DISCARDABLE 144, 103, 380, 157
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 11, 68, 12
-  CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 144, 11, 227, 12
-  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 74, 24, 68, 12
-  CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 38, 68, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 51, 68, 12
-  CONTROL "", 222, "Edit", WS_BORDER, 144, 51, 227, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 65, 68, 12
-  CONTROL "", 232, "Edit", WS_BORDER, 144, 65, 227, 12
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 78, 68, 12
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 91, 68, 12
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 104, 68, 12
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 117, 68, 12
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 91, 53, 12
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 247, 91, 20, 12
-  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 91, 53, 12
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 104, 53, 12
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 247, 104, 20, 12
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 104, 53, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 117, 30, 12
-  CONTROL "", 191, "Edit", WS_BORDER, 223, 117, 148, 12
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 137, 68, 12
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 192, 137, 75, 12
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 74, 11, 68, 11
+  CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 144, 11, 227, 11
+  CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 74, 24, 68, 11
+  CONTROL "", 320, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 38, 68, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 74, 51, 68, 11
+  CONTROL "", 222, "Edit", WS_BORDER, 144, 51, 227, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 74, 65, 68, 11
+  CONTROL "", 232, "Edit", WS_BORDER, 144, 65, 227, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 78, 68, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 91, 68, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 74, 104, 68, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 74, 117, 68, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 91, 49, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 242, 91, 20, 11
+  CONTROL "", 172, "Edit", ES_RIGHT|WS_BORDER, 318, 91, 53, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 192, 104, 49, 11
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 242, 104, 20, 11
+  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER, 318, 104, 53, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 192, 117, 70, 11
+  CONTROL "", 191, "Edit", WS_BORDER, 263, 117, 108, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER, 74, 137, 68, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_BORDER, 192, 137, 75, 11
   CONTROL "Producto", -1, "Button", BS_GROUPBOX, 2, 2, 374, 151
   CONTROL "Cajas ", 121, "Static", WS_GROUP, 8, 81, 23, 8
   CONTROL "Total unidades", -1, "Static", WS_GROUP, 8, 107, 50, 8
@@ -16248,25 +16248,25 @@ PRODUCCION_1 DIALOG DISCARDABLE 97, 39, 670, 375
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 89, 40, 28, 12
-  CONTROL "", 110, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 119, 40, 60, 12
-  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 181, 40, 28, 12
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 89, 52, 64, 12
-  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 155, 52, 54, 12
-  CONTROL "", 131, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 89, 64, 64, 12
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 155, 64, 54, 12
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER, 89, 76, 120, 12
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 253, 40, 65, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 320, 40, 180, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 253, 52, 65, 12
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 320, 52, 180, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 253, 64, 65, 12
-  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 320, 64, 180, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 253, 76, 65, 12
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 320, 76, 180, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 253, 88, 65, 12
-  CONTROL "TBitmap", 141, "TBitmap", 0x00800000, 320, 88, 18, 11
-  CONTROL "", 142, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 371, 88, 129, 12
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 89, 40, 28, 11
+  CONTROL "", 110, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 119, 40, 60, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 181, 40, 28, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 89, 52, 64, 11
+  CONTROL "", 170, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 155, 52, 54, 11
+  CONTROL "", 131, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 89, 64, 64, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 155, 64, 54, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_BORDER, 89, 76, 120, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 253, 40, 70, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 324, 40, 176, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 253, 52, 70, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 324, 52, 176, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 253, 64, 70, 11
+  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 324, 64, 176, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 253, 76, 70, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 324, 76, 176, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 253, 88, 70, 11
+  CONTROL "TBitmap", 141, "TBitMap", 0x00800000, 324, 88, 18, 11
+  CONTROL "", 142, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 379, 88, 121, 11
   CONTROL "Añadir [F2]", 500, "Button", WS_TABSTOP, 50, 123, 50, 14
   CONTROL "Modificar [F3]", 501, "Button", WS_TABSTOP, 105, 123, 50, 14
   CONTROL "Zoom", 502, "Button", WS_TABSTOP, 160, 123, 50, 14
@@ -16279,7 +16279,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Totales", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 514, 30, 148, 76
   CONTROL "Número", -1, "Static", WS_GROUP, 50, 43, 34, 8
   CONTROL "Divisa", -1, "Static", WS_GROUP, 213, 91, 40, 8
-  CONTROL "Cambio", -1, "Static", WS_GROUP, 342, 91, 29, 8
+  CONTROL "Cambio", -1, "Static", WS_GROUP, 349, 91, 29, 8
   CONTROL "Materiales producidos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 110, 618, 259
   CONTROL "Sección", -1, "Static", WS_GROUP, 213, 55, 40, 8
   CONTROL "Empleado", -1, "Static", WS_GROUP, 50, 79, 34, 8
@@ -17658,31 +17658,31 @@ SATCLI_1 DIALOG DISCARDABLE 64, -21, 670, 375
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 225, 30, 100, 12
-  CONTROL "", 132, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 362, 30, 70, 12
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 225, 42, 207, 12
-  CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 225, 54, 100, 12
-  CONTROL "", 133, "Edit", ES_RIGHT|WS_BORDER, 362, 54, 70, 12
-  CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 225, 66, 207, 12
-  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 225, 78, 61, 12
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 287, 78, 145, 12
-  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 225, 90, 100, 12
-  CONTROL "", 106, "Edit", WS_BORDER, 362, 90, 70, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 225, 103, 61, 12
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 287, 102, 145, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 225, 114, 61, 12
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 287, 114, 145, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 464, 30, 70, 12
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 536, 30, 126, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 464, 42, 70, 12
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 536, 42, 126, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 464, 54, 70, 12
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 536, 54, 126, 12
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 464, 66, 70, 12
-  CONTROL "", 183, "Edit", ES_RIGHT|WS_BORDER, 536, 66, 126, 12
-  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 464, 78, 70, 12
-  CONTROL "", 186, "Edit", WS_BORDER|WS_TABSTOP, 536, 78, 126, 12
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 464, 90, 52, 12
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 225, 30, 100, 11
+  CONTROL "", 132, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 362, 30, 70, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 225, 42, 207, 11
+  CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 225, 54, 100, 11
+  CONTROL "", 133, "Edit", ES_RIGHT|WS_BORDER, 362, 54, 70, 11
+  CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 225, 66, 207, 11
+  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 225, 78, 61, 11
+  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 287, 78, 145, 11
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 225, 90, 100, 11
+  CONTROL "", 106, "Edit", WS_BORDER, 362, 90, 70, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 225, 102, 70, 11
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 296, 102, 136, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 225, 114, 70, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 296, 114, 136, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 464, 30, 70, 11
+  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 536, 30, 126, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 464, 42, 70, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 536, 42, 126, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 464, 54, 70, 11
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 536, 54, 126, 11
+  CONTROL "", 182, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 464, 66, 70, 11
+  CONTROL "", 183, "Edit", ES_RIGHT|WS_BORDER, 536, 66, 126, 11
+  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 464, 78, 70, 11
+  CONTROL "", 186, "Edit", WS_BORDER|WS_TABSTOP, 536, 78, 126, 11
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 464, 90, 52, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 43, 130, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 130, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 130, 50, 14
@@ -17692,33 +17692,33 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 373, 130, 50, 14
   CONTROL "Mostrar Esc&ll.", 526, "Button", WS_TABSTOP, 428, 130, 50, 14
   CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 44, 147, 618, 139
-  CONTROL "", 219, "Edit", WS_BORDER|WS_TABSTOP, 51, 300, 90, 12
-  CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 142, 300, 44, 12
-  CONTROL "", 229, "Edit", WS_BORDER|WS_TABSTOP, 51, 312, 90, 12
-  CONTROL "", 230, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 142, 312, 44, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 51, 324, 90, 12
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 142, 324, 44, 12
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 51, 336, 90, 12
-  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 142, 336, 44, 12
+  CONTROL "", 219, "Edit", WS_BORDER|WS_TABSTOP, 51, 300, 90, 11
+  CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 142, 300, 44, 11
+  CONTROL "", 229, "Edit", WS_BORDER|WS_TABSTOP, 51, 312, 90, 11
+  CONTROL "", 230, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 142, 312, 44, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 51, 324, 90, 11
+  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 142, 324, 44, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 51, 336, 90, 11
+  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 142, 336, 44, 11
   CONTROL "", 490, "TXBrowse", 0x00200000, 209, 290, 249, 80
-  CONTROL "", 411, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 462, 290, 90, 12
-  CONTROL "", 412, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 554, 290, 40, 12
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 596, 290, 65, 12
+  CONTROL "", 411, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 462, 290, 90, 11
+  CONTROL "", 412, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 554, 290, 40, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 596, 290, 65, 11
   CONTROL "0", 401, "Static", SS_RIGHT|WS_GROUP, 578, 301, 80, 8
   CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 578, 319, 80, 8
   CONTROL "0", 405, "Static", SS_RIGHT|WS_GROUP, 578, 337, 80, 8
   CONTROL "0", 407, "Static", SS_RIGHT|WS_GROUP, 578, 346, 80, 8
   CONTROL "", 410, "Static", WS_GROUP, 462, 356, 35, 15
   CONTROL "0", 420, "Static", SS_RIGHT|WS_GROUP, 578, 356, 80, 15
-  CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 96, 30, 24, 12
-  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 121, 30, 34, 12
-  CONTROL "", 105, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 156, 30, 18, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 96, 42, 78, 12
-  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 96, 54, 78, 12
+  CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 96, 30, 24, 11
+  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 121, 30, 34, 11
+  CONTROL "", 105, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 156, 30, 18, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 96, 42, 78, 11
+  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 96, 54, 78, 11
   CONTROL "Reparación cubierta por garantía", 115, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 68, 121, 8
-  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 96, 78, 78, 12
+  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 96, 78, 78, 11
   CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_TABSTOP, 96, 90, 78, 186
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 96, 103, 78, 12
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 96, 103, 78, 11
   CONTROL "Impuestos incluidos", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 117, 75, 8
   CONTROL "Punto verde", 409, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 462, 328, 52, 10
   CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 44, 289, 160, 61
@@ -17754,7 +17754,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Transporte", 712, "Static", WS_GROUP, 462, 310, 39, 8
   CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 578, 310, 80, 8
   CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 578, 328, 80, 8
-  CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 89, 357, 108, 12
+  CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 89, 357, 108, 11
   CONTROL "Entrega en", 112, "Static", WS_GROUP, 44, 57, 51, 8
   CONTROL "Su referencia", 123, "Static", WS_GROUP, 44, 81, 51, 8
   CONTROL "", 201, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE|SS_RIGHTJUST, 518, 90, 16, 11
